// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton > renders a custom size and explicit title 1`] = `
<button
  aria-label="Delete layer"
  class="icon-btn"
  title="Delete"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-trash2 lucide-trash-2 icon"
    fill="none"
    height="16"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 11v6"
    />
    <path
      d="M14 11v6"
    />
    <path
      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
    />
    <path
      d="M3 6h18"
    />
    <path
      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
    />
  </svg>
</button>
`;

exports[`IconButton > renders as the modal close control 1`] = `
<button
  aria-label="Close"
  class="icon-btn modal__close"
  title="Close"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-x icon"
    fill="none"
    height="14"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
</button>
`;

exports[`IconButton > renders with a required accessible name 1`] = `
<button
  aria-label="Close"
  class="icon-btn"
  title="Close"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-x icon"
    fill="none"
    height="14"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
</button>
`;
